<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/activitymain_et_judul"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/judul"/>
    <EditText
        android:id="@+id/activitymain_et_penulis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/penulis"
        android:layout_marginTop="8dp"/>

    <Button
        android:id="@+id/activitymain_btn_simpan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/submit"/>

    <Button
        android:id="@+id/activitymain_btn_lihatdata"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/lihat_data"/>



</LinearLayout>